--- a/index.html
+++ b/index.html
@@ -30,114 +30,114 @@
             <div class="chatList">
                 <div class="block active">
                     <div class="imgBox">
-                        <img src="user.png" alt="" class="cover">
+                        <img src="user1.png" alt="" class="cover">
                     </div>
                     <div class="details" >
                          <div class="listHead">
-                            <h4>Ezgiloji</h4>
-                            <p class="time">12.35</p>
+                            <h4>Sevda Sarı</h4>
+                            <p class="time">22.35</p>
                          </div>
                          <div class="message_p">
-                            <p>İlk projem</p>
+                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam obcaecati quisquam maxime deserunt porro aliquid saepe omnis cumque a iste. Nemo, voluptas voluptatibus aspernatur dolor perspiciatis facere perferendis accusamus quas.</p>
                          </div>
                     </div>
                 </div>
                 <div class="block unread">
                     <div class="imgBox">
-                        <img src="user1.png" alt="" class="cover">
+                        <img src="user2.png" alt="" class="cover">
                     </div>
                     <div class="details" >
                          <div class="listHead">
-                            <h4>Ezgi Dolma</h4>
-                            <p class="time">17.35</p>
+                            <h4>Melike Mengilli</h4>
+                            <p class="time">22.30</p>
                          </div>
                          <div class="message_p">
-                            <p>Whatsapp Clone HTML ve CSS kullanarak</p>
+                            <p> Veniam pariatur quos quisquam magnam ipsa dolores quo assumenda autem quis voluptatem, aspernatur eaque! Perferendis, voluptas aperiam beatae quasi nesciunt a magni!</p>
                             <b>2</b>
                          </div>
                     </div>
                 </div>
                 <div class="block ">
                     <div class="imgBox">
-                        <img src="user.png" alt="" class="cover">
+                        <img src="user3.png" alt="" class="cover">
                     </div>
                     <div class="details" >
                          <div class="listHead">
-                            <h4>Ezgiloji</h4>
-                            <p class="time">12.35</p>
+                            <h4>Ceren Hançerli</h4>
+                            <p class="time">21.05</p>
                          </div>
                          <div class="message_p">
-                            <p>İlk projem</p>
+                            <p>Perferendis, voluptas aperiam beatae quasi nesciunt a magni!</p>
                          </div>
                     </div>
                 </div>
                 <div class="block ">
                     <div class="imgBox">
-                        <img src="user.png" alt="" class="cover">
+                        <img src="user4.png" alt="" class="cover">
                     </div>
                     <div class="details" >
                          <div class="listHead">
-                            <h4>Ezgiloji</h4>
-                            <p class="time">12.35</p>
+                            <h4>Kübra Çelik</h4>
+                            <p class="time">21.00</p>
                          </div>
                          <div class="message_p">
-                            <p>İlk projem</p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, eius beatae tenetur sequi debitis eveniet. Alias, repellat reprehenderit. Facere quos, exercitationem expedita corporis commodi nisi eligendi odit impedit quia excepturi!</p>
                          </div>
                     </div>
                 </div>
                 <div class="block ">
                     <div class="imgBox">
-                        <img src="user.png" alt="" class="cover">
+                        <img src="user5.png" alt="" class="cover">
                     </div>
                     <div class="details" >
                          <div class="listHead">
-                            <h4>Ezgiloji</h4>
-                            <p class="time">12.35</p>
+                            <h4>Kayra Berk</h4>
+                            <p class="time">19.55</p>
                          </div>
                          <div class="message_p">
-                            <p>İlk projem</p>
+                            <p> Blanditiis repellendus illo accusantium cum error in nulla consequatur ad facilis quisquam eaque, laborum iusto!</p>
                          </div>
                     </div>
                 </div>
                 <div class="block ">
                     <div class="imgBox">
-                        <img src="user.png" alt="" class="cover">
+                        <img src="user6.png" alt="" class="cover">
                     </div>
                     <div class="details" >
                          <div class="listHead">
-                            <h4>Ezgiloji</h4>
-                            <p class="time">12.35</p>
+                            <h4>Reşit Taşdemir</h4>
+                            <p class="time">19.35</p>
                          </div>
                          <div class="message_p">
-                            <p>İlk projem</p>
+                            <p>kssşklfddddddddddddddddddddddd</p>
                          </div>
                     </div>
                 </div>
                 <div class="block ">
                     <div class="imgBox">
-                        <img src="user.png" alt="" class="cover">
+                        <img src="user7.png" alt="" class="cover">
                     </div>
                     <div class="details" >
                          <div class="listHead">
-                            <h4>Ezgiloji</h4>
-                            <p class="time">12.35</p>
+                            <h4>Aslı Pak</h4>
+                            <p class="time">18.35</p>
                          </div>
                          <div class="message_p">
-                            <p>İlk projem</p>
+                            <p>İlssflkffjdkjk projem</p>
                          </div>
                     </div>
                 </div>
                 <div class="block ">
                     <div class="imgBox">
-                        <img src="user.png" alt="" class="cover">
+                        <img src="user8.png" alt="" class="cover">
                     </div>
                     <div class="details" >
                          <div class="listHead">
-                            <h4>Ezgiloji</h4>
+                            <h4>Cansel Hançerli</h4>
                             <p class="time">12.35</p>
                          </div>
                          <div class="message_p">
-                            <p>İlk projem</p>
+                            <p>İlmdmöcbmcbcöçk projem</p>
                          </div>
                     </div>
                 </div>
@@ -148,9 +148,9 @@
             <div class="header">
                 <div class="imgText">
                     <div class="userImg">
-                        <img src="user.png"  class="cover" >
+                        <img src="user1.png"  class="cover" >
                     </div>
-                    <h4>Ezgiloji<br> <span>online</span></h4>
+                    <h4>Sevda Sarı<br> <span>online</span></h4>
             </div>
                 <ul class="nav_icons">
                     <li><i class="fa-solid fa-circle"></i></li>
@@ -166,16 +166,16 @@
                     <p>Hi <br><span>12.16</span></p>
                 </div>
                 <div class="message my_message">
-                    <p>Hi <br><span>12.12</span></p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.  <br><span>12.16</span></p>
                 </div>
                 <div class="message frnd_message">
-                    <p>Hi <br><span>12.16</span></p>
+                    <p> Sed, sint animi? Dignissimos quae ducimus blanditiis illo fuga sapiente ipsam et! <br><span>12.18</span></p>
                 </div>
                 <div class="message my_message">
-                    <p>Hi <br><span>12.12</span></p>
+                    <p>By <br><span>22.35</span></p>
                 </div>
                 <div class="message frnd_message">
-                    <p>Hi <br><span>12.16</span></p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit tempore blanditiis consectetur illum optio ratione, eos commodi nulla reprehenderit consequatur fugiat at omnis nobis culpa necessitatibus est excepturi, quaerat quibusdam? <br><span>22.35</span></p>
                 </div>
             </div>
             <div class="chatInput">
