--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Whatsapp Web</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css">
+    <link rel="short icon" type="image/png" href="ujTY9i_Jhs1.png">
 </head>
 <body>
     <div class="container">
